# hook_wallet_core

./: .gitignore  Cargo.toml
apps/api/: Cargo.toml
apps/api/src/: main.rs  params.rs  responders.rs
apps/api/src/chain/: balance.rs  client.rs  mod.rs
apps/api/src/system/: status.rs
config/: default.toml  development.toml  production.toml
crates/core_bsc/: Cargo.toml
crates/core_chain_traits/: Cargo.toml
crates/core_chain_traits/src/: lib.rs
crates/core_client/: Cargo.toml
crates/core_client/src/: client_config.rs  content_type.rs  query.rs  reqwest_client.rs  retry.rs  types.rs
crates/core_evm/: Cargo.toml
crates/core_evm/src/: jsonrpc.rs  lib.rs  multicall3.rs
crates/core_evm/src/everstake/: client.rs
crates/core_evm/src/provider/: accounts.rs  balances.rs  balances_smartchain.rs  mod.rs  staking_ethereum.rs  staking_smartchain.rs  state.rs
crates/core_evm/src/rpc/: client.rs  mod.rs  model.rs
crates/core_evm/src/rpc/ankr/: client.rs  model.rs
crates/core_jsonrpc/: Cargo.toml
crates/core_jsonrpc/src/: client.rs  lib.rs  rpc.rs  types.rs
crates/core_solana/: Cargo.toml
crates/core_solana/src/: jsonrpc.rs  lib.rs
crates/core_solana/src/models/: mod.rs
crates/core_solana/src/provider/: balances.rs  mod.rs  state.rs
crates/core_solana/src/rpc/: client.rs
crates/core_tracing/: Cargo.toml
crates/core_tracing/src/: lib.rs
crates/primitives/: Cargo.toml
crates/primitives/src/: asset.rs  asset_balance.rs  asset_id.rs  chain.rs  chain_evm.rs  device.rs  lib.rs
crates/serde_serializers/src/: biguint.rs  lib.rs
crates/settings/: Cargo.toml
crates/settings/src/: lib.rs
crates/settings_chain/: Cargo.toml
crates/settings_chain/src/: chain_providers.rs  lib.rs
