[workspace.package]
version = "1.0.0"
edition = "2024"
license = "MIT"

[workspace]
resolver = "2"
members = ["apps/api", "crates/core_chain_traits",
    "crates/core_client", "crates/core_jsonrpc",
    "crates/core_tracing",
    "crates/primitives",
    "crates/serde_serializers",
    "crates/settings_chain",
    "crates/core_solana",
    "crates/settings"]


[workspace.dependencies]
rocket = { version = "0.5", features = ["json"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
config = "0.15.18"
serde = { version = "1.0.228", features = ["derive"] }
strum = { version = "0.27.2", features = ["derive"] }
lazy_static = "1.5.0"
sysinfo = "0.37.2"
async-trait = { version = "0.1.89" }
serde_json = { version = "1.0.145", features = ["preserve_order"] }
serde_urlencoded = { version = "0.7.1" }
reqwest = { version = "0.12.23", features = [
    "json",
    "gzip",
    "brotli",
    "deflate",
    "http2",
] }
hex = { version = "0.4.3" }
auto-allocator = "0.1.0"
num-bigint = { version = "0.4.6", features = ["std", "serde"] }
num-traits = { version = "0.2.19" }
futures = { version = "0.3.31" }
typeshare = { version = "1.0.4" }
url = { version = "2.5.7" }