[package]
name = "api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rocket = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
core_tracing = { path = "../../crates/core_tracing" }
settings = { path = "../../crates/settings" }
strum = { workspace = true }
serde = { workspace = true }
lazy_static = { workspace = true }
sysinfo = { workspace = true }
auto-allocator = { workspace = true }
primitives = { path = "../../crates/primitives" }
settings_chain = { path = "../../crates/settings_chain" }
