[package]
name = "core_client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
reqwest = { workspace = true, optional = true }
hex = { workspace = true }
tokio = { workspace = true, features = ["time"], optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[features]
default = ["reqwest"]
reqwest = ["dep:reqwest", "dep:tokio"]
