[package]
name = "primitives"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
strum = { workspace = true }
typeshare = { workspace = true }
num-bigint = { workspace = true }
serde_json = {workspace = true}
serde_serializers = { path = "../serde_serializers" }
[dev-dependencies]
serde_json = { workspace = true }
